--- a/bower.json
+++ b/bower.json
@@ -31,10 +31,12 @@
     "nvd3": "~1.1.15-beta",
     "mcda-web": "https://github.com/drugis/mcda-elicitation-web.git#0.8.1",
     "gemtc-web": "https://github.com/ConnorStroomberg/gemtc-web.git#0.0.2",
-    "moment": "~2.8.1"
+    "moment": "~2.8.1",
+    "ngtoast": "~1.2.0"
   },
   "resolutions": {
     "angular": "1.3.0-rc.0",
-    "d3": "~3.3.13"
+    "d3": "~3.3.13",
+    "angular-animate": "1.3.0-rc.0"
   }
 }
