--- a/bower.json
+++ b/bower.json
@@ -44,6 +44,9 @@
   "resolutions": {
     "angular": "1.3.0-rc.0",
     "d3": "~3.3.13",
-    "angular-animate": "1.3.0-rc.0"
+    "angular-animate": "1.3.0-rc.0",
+    "foundation": "~5.0.3",
+    "nvd3": "~1.1.15-beta",
+    "angular-resource": "1.3.0-rc.0"
   }
 }
